--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10417,3 +10417,9 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.akaNavPlaceholder {
+  background-color: dodgerblue;
+  height: 56px;
+  width: 100%;
+}
+
