fancy stuff added...

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,13 +8,6 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
-
-.akaNavPlaceholder {
-  background-color: dodgerblue;
-  height: 56px;
-  width: 100%;
-}
+//Albert's styles
+@import 'styles';
+@import 'components/__components';
