--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,8 @@
 
-// Body
-$body-bg: #f5f8fa;
+$akaBlue: #00AAFF;
+$akaLightBlue: #E0F5FF;
+$akaWhite: #FFFFFF;
+$akaGrey: #BFBFBF;
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
