--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -3,6 +3,11 @@ $akaBlue: #00AAFF;
 $akaLightBlue: #E0F5FF;
 $akaWhite: #FFFFFF;
 $akaGrey: #BFBFBF;
+$akaPink: #E50F63;
+$akaGreen: #00A64F;
+$akaGreen: #00A64F;
+
+
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
