--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,11 +1,12 @@
 
-$akaBlue: #00AAFF;
+$akaBlue: #0094BB;
 $akaLightBlue: #E0F5FF;
 $akaWhite: #FFFFFF;
 $akaGrey: #BFBFBF;
 $akaPink: #E50F63;
 $akaGreen: #00A64F;
-$akaGreen: #00A64F;
+$akaDarkBlue: #1F304D;
+
 
 
 
