--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10411,29 +10411,28 @@ a.text-dark:focus {
   }
 }
 
+:root {
+  font-family: 'Scene';
+}
+
 body {
   background: #FFFFFF;
-  color: #00AAFF;
+  color: #0094BB;
+  font-family: 'Scene';
 }
 
 a:link {
-  color: #00AAFF;
+  color: #0094BB;
 }
-
-/* visited link */
 
 a:visited {
-  color: #00AAFF;
+  color: #0094BB;
 }
-
-/* mouse over link */
 
 a:hover {
   color: black;
   text-decoration: none;
 }
-
-/* selected link */
 
 a:active {
   color: #E0F5FF;
@@ -10486,7 +10485,19 @@ p {
 }
 
 .akaBlueText {
-  color: #00AAFF;
+  color: #0094BB;
+}
+
+@font-face {
+  font-family: 'Scene';
+  font-weight: 300;
+  src: url("/fonts/SceneAH-Light.otf") format("opentype"), url("/fonts/SceneProLight.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Scene';
+  font-weight: 500;
+  src: url("/fonts/SceneAH-Medium.otf") format("opentype"), url("/fonts/SceneProMedium.woff") format("woff");
 }
 
 .akaPostImage {
@@ -10508,7 +10519,7 @@ p {
 }
 
 .akaButton {
-  background-color: #00AAFF;
+  background-color: #0094BB;
   width: 50%;
   border-radius: 0;
   margin-top: -1.25rem;
@@ -10529,7 +10540,7 @@ p {
 }
 
 .akaBgBlue {
-  background-color: #00AAFF;
+  background-color: #0094BB;
 }
 
 .akaMarginTinyLeft {
@@ -10537,44 +10548,152 @@ p {
 }
 
 .akaNavPlaceholder {
-  height: 56px;
+  height: 60px;
   width: 100%;
-  opacity: 0;
 }
 
 .akaNavBottom,
 .akaNavTop {
   background-color: #FFFFFF;
-}
-
-.akaNavBottom {
-  border-top: 1px solid #BFBFBF;
+  height: 60px;
+  width: 100%;
 }
 
 .akaNavTop {
   border-bottom: 1px solid #BFBFBF;
 }
 
+.akaNavbarContainer {
+  max-width: 800px;
+  margin: auto;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.akaSubNavContainer {
+  max-width: 600px;
+  margin: auto;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+a.akaNavLink {
+  font-size: 20px;
+  color: #1F304D;
+  opacity: 0.5;
+}
+
+a.akaNavLink.active {
+  opacity: 1;
+  text-decoration: underline;
+}
+
+.akaNavBottom {
+  border-top: 1px solid #BFBFBF;
+}
+
 .akaBubble {
+  position: relative;
   width: 50px;
   height: 50px;
   border-radius: 50px;
 }
 
-.akaPink {
+.akaFel,
+.akaHem,
+.akaIde {
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+.akaFel {
   background: #E50F63;
+  background-image: url(/images/triangleWhite.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 42%;
 }
 
-.akaGreen {
+.akaHem {
   background: #00A64F;
+  background-image: url(/images/houseWhite.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 45%;
 }
 
-.akaWhite {
-  background: #FFFFFF;
-  border: 1px solid black;
+.akaIde {
+  background: #0094BB;
+  background-image: url(/images/bulbWhite.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.akaFel p,
+.akaHem p,
+.akaIde p {
+  position: absolute;
+  left: 50%;
+  top: 132%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.akaFel:hover,
+.akaFel.active:hover {
+  background-color: white;
+  background-image: url(/images/trianglePink.svg);
+  -webkit-box-shadow: 0px 0px 18px #E50F63;
+          box-shadow: 0px 0px 18px #E50F63;
+}
+
+.akaHem:hover,
+.akaHem.active:hover {
+  background-color: white;
+  background-image: url(/images/houseGreen.svg);
+  -webkit-box-shadow: 0px 0px 18px #00A64F;
+          box-shadow: 0px 0px 18px #00A64F;
+}
+
+.akaIde:hover,
+.akaIde.active:hover {
+  background-color: white;
+  background-image: url(/images/bulbYellow.svg);
+  -webkit-box-shadow: 0px 0px 18px #0094BB;
+          box-shadow: 0px 0px 18px #0094BB;
+}
+
+.akaFel.active {
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 0px 1px #E50F63;
+          box-shadow: 0px 0px 0px 1px #E50F63;
+  background-image: url(/images/trianglePink.svg);
+}
+
+.akaHem.active {
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 0px 1px #00A64F;
+          box-shadow: 0px 0px 0px 1px #00A64F;
+  background-image: url(/images/houseGreen.svg);
+}
+
+.akaIde.active {
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 0px 1px #0094BB;
+          box-shadow: 0px 0px 0px 1px #0094BB;
+  background-image: url(/images/bulbYellow.svg);
 }
 
 .akaBubbleContainer {
+  max-width: 800px;
+  margin: auto;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10583,6 +10702,7 @@ p {
       justify-content: space-around;
   position: absolute;
   left: 50%;
+  top: 0;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
@@ -10605,14 +10725,14 @@ input[type="file"] {
           align-items: center;
   border-radius: 7px;
   color: white;
-  background-color: #00AAFF;
+  background-color: #0094BB;
   cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
 }
 
 .inputfile + label svg {
-  margin-right: 13px;
+  margin-right: 7px;
 }
 
 .inputfile:focus + label,
