added very important stuff

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,10 +2,13 @@
 $akaBlue: #0094BB;
 $akaLightBlue: #E0F5FF;
 $akaWhite: #FFFFFF;
-$akaGrey: #BFBFBF;
+$akaLightGrey: #BFBFBF;
+$akaGrey: #9e9e9e;
 $akaPink: #E50F63;
 $akaGreen: #00A64F;
 $akaDarkBlue: #1F304D;
+$akaOrange: #F7911E;
+
 
 
 
