--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10419,6 +10419,12 @@ body {
   background: #FFFFFF;
   color: #0094BB;
   font-family: 'Scene';
+  font-size: 16px;
+}
+
+p {
+  color: black;
+  font-size: 14px;
 }
 
 a:link {
@@ -10449,13 +10455,19 @@ textarea {
   color: #FFF;
 }
 
+:focus {
+  outline-color: green;
+  outline-style: auto;
+  outline-width: 5px;
+}
+
 .form-control {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
   font-size: 0.9rem;
   line-height: 1.6;
-  color: #495057;
+  color: #9e9e9e;
   background-color: #e1f6ff;
   background-clip: padding-box;
   border: 0px solid #ced4da;
@@ -10476,10 +10488,6 @@ input:-webkit-autofill:focus input:-webkit-autofill {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-p {
-  color: black;
-}
-
 .nopacity {
   opacity: 0;
 }
@@ -10498,6 +10506,86 @@ p {
   font-family: 'Scene';
   font-weight: 500;
   src: url("/fonts/SceneAH-Medium.otf") format("opentype"), url("/fonts/SceneProMedium.woff") format("woff");
+}
+
+.akaBorderRadius {
+  border-radius: 7px;
+}
+
+.akaBgBlue {
+  background-color: #0094BB;
+}
+
+.akaBgPink {
+  background-color: #E50F63;
+}
+
+.akaMt2rem {
+  margin-top: 2rem;
+}
+
+.akaMl1rem {
+  margin-left: 0.5rem;
+}
+
+.akaNoWrap {
+  white-space: nowrap;
+}
+
+.akaFlexRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.akaFlexRow input[type=checkbox] {
+  zoom: 1.5;
+}
+
+::-webkit-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #9e9e9e;
+  opacity: 1;
+  /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #9e9e9e;
+  opacity: 1;
+  /* Firefox */
+}
+
+::-ms-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #9e9e9e;
+  opacity: 1;
+  /* Firefox */
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #9e9e9e;
+  opacity: 1;
+  /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #9e9e9e;
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #9e9e9e;
+}
+
+.btn {
+  font-size: 16px;
+}
+
+.akaPink {
+  color: #E50F63;
 }
 
 .akaPostImage {
@@ -10539,10 +10627,6 @@ p {
   border-bottom-right-radius: 7px;
 }
 
-.akaBgBlue {
-  background-color: #0094BB;
-}
-
 .akaMarginTinyLeft {
   margin-left: 1px;
 }
@@ -10560,7 +10644,7 @@ p {
 }
 
 .akaNavTop {
-  border-bottom: 1px solid #BFBFBF;
+  border-bottom: 1px solid #9e9e9e;
 }
 
 .akaNavbarContainer {
@@ -10573,6 +10657,16 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+a.akaNavTopLink {
+  padding-right: 5px;
+  padding-top: 5px;
+  font-size: 16px;
+  color: #9e9e9e;
 }
 
 .akaSubNavContainer {
@@ -10598,7 +10692,7 @@ a.akaNavLink.active {
 }
 
 .akaNavBottom {
-  border-top: 1px solid #BFBFBF;
+  border-top: 1px solid #9e9e9e;
 }
 
 .akaBubble {
@@ -10650,45 +10744,45 @@ a.akaNavLink.active {
 .akaFel.active:hover {
   background-color: white;
   background-image: url(/images/trianglePink.svg);
-  -webkit-box-shadow: 0px 0px 18px #E50F63;
-          box-shadow: 0px 0px 18px #E50F63;
+  -webkit-box-shadow: 0px 0px 18px #9e9e9e;
+          box-shadow: 0px 0px 18px #9e9e9e;
 }
 
 .akaHem:hover,
 .akaHem.active:hover {
   background-color: white;
   background-image: url(/images/houseGreen.svg);
-  -webkit-box-shadow: 0px 0px 18px #00A64F;
-          box-shadow: 0px 0px 18px #00A64F;
+  -webkit-box-shadow: 0px 0px 18px #9e9e9e;
+          box-shadow: 0px 0px 18px #9e9e9e;
 }
 
 .akaIde:hover,
 .akaIde.active:hover {
   background-color: white;
-  background-image: url(/images/bulbYellow.svg);
-  -webkit-box-shadow: 0px 0px 18px #0094BB;
-          box-shadow: 0px 0px 18px #0094BB;
+  background-image: url(/images/bulbBlue.svg);
+  -webkit-box-shadow: 0px 0px 18px #9e9e9e;
+          box-shadow: 0px 0px 18px #9e9e9e;
 }
 
 .akaFel.active {
   background-color: white;
-  -webkit-box-shadow: 0px 0px 0px 1px #E50F63;
-          box-shadow: 0px 0px 0px 1px #E50F63;
+  -webkit-box-shadow: 0px 0px 0px 1px #9e9e9e;
+          box-shadow: 0px 0px 0px 1px #9e9e9e;
   background-image: url(/images/trianglePink.svg);
 }
 
 .akaHem.active {
   background-color: white;
-  -webkit-box-shadow: 0px 0px 0px 1px #00A64F;
-          box-shadow: 0px 0px 0px 1px #00A64F;
+  -webkit-box-shadow: 0px 0px 0px 1px #9e9e9e;
+          box-shadow: 0px 0px 0px 1px #9e9e9e;
   background-image: url(/images/houseGreen.svg);
 }
 
 .akaIde.active {
   background-color: white;
-  -webkit-box-shadow: 0px 0px 0px 1px #0094BB;
-          box-shadow: 0px 0px 0px 1px #0094BB;
-  background-image: url(/images/bulbYellow.svg);
+  -webkit-box-shadow: 0px 0px 0px 1px #9e9e9e;
+          box-shadow: 0px 0px 0px 1px #9e9e9e;
+  background-image: url(/images/bulbBlue.svg);
 }
 
 .akaBubbleContainer {
@@ -10749,5 +10843,192 @@ input[type="file"] {
 .akaUploadCaption {
   white-space: nowrap;
   overflow: hidden;
+}
+
+.akaMapInput {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+}
+
+.akaMapInput button {
+  border: none;
+  width: 45px;
+  height: 40px;
+  margin: 10px;
+  margin-right: 0px;
+  border-radius: 7px;
+  background-color: #E50F63;
+  background-image: url(/images/location.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
+}
+
+.akaMapInput label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.akaMapInput input {
+  padding-left: 7px;
+  margin: 10px;
+  color: black;
+  background-color: white;
+  border-radius: 7px;
+  border: 1.2px #E50F63 solid;
+  height: 40px;
+  width: 100%;
+}
+
+.akaMapInput button:focus {
+  outline: none;
+}
+
+.akaRelative {
+  position: relative;
+}
+
+.akaGmap {
+  width: 100%;
+  height: 400px;
+}
+
+.akaErrorReport {
+  color: #E50F63;
+}
+
+.akaErrorReport :focus {
+  outline-color: #E50F63;
+  outline-style: auto;
+  outline-width: 5px;
+}
+
+.akaErrorReport h5 {
+  font-size: 18px;
+}
+
+.akaErrorReport .form-control {
+  padding: 0.375rem 0.5rem;
+  height: 40px;
+  border: 1.2px solid #E50F63;
+}
+
+.akaErrorReport .form-group textarea {
+  height: 338px;
+}
+
+.akaErrorReport .inputfile + label {
+  margin: 0;
+  padding: 7px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 7px;
+  color: white;
+  background-color: #E50F63;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.akaTextProp {
+  font-size: 0.75rem;
+  color: #9e9e9e;
+}
+
+.akaFormControl {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.5rem;
+  height: 40px;
+  font-size: 0.9rem;
+  line-height: 1.6;
+  color: #495057;
+  background-color: white;
+  background-clip: padding-box;
+  border: 1.2px solid #E50F63;
+  border-radius: 7px;
+  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+.akaMalfunction {
+  color: #F7911E;
+}
+
+.akaMalfunction :focus {
+  outline-color: #F7911E;
+  outline-style: auto;
+  outline-width: 5px;
+}
+
+.akaMalfunction h5 {
+  font-size: 18px;
+}
+
+.akaMalfunction .form-control {
+  padding: 0.375rem 0.5rem;
+  height: 40px;
+  border: 1.2px solid #F7911E;
+}
+
+.akaMalfunction .form-group textarea {
+  height: 338px;
+}
+
+.akaMalfunction .inputfile + label {
+  margin: 0;
+  padding: 7px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 7px;
+  color: white;
+  background-color: #F7911E;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.akaTextProp {
+  font-size: 0.75rem;
+  color: #9e9e9e;
+}
+
+.akaFormControl {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.5rem;
+  height: 40px;
+  font-size: 0.9rem;
+  line-height: 1.6;
+  color: #495057;
+  background-color: white;
+  background-clip: padding-box;
+  border: 1.2px solid #F7911E;
+  border-radius: 7px;
+  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
 
