--- a/resources/assets/sass/_styles.scss
+++ b/resources/assets/sass/_styles.scss
@@ -6,6 +6,12 @@ body {
     background: $akaWhite;
     color: $akaBlue;
     font-family: 'Scene';
+    font-size: 16px;
+}
+
+p {
+    color: black;
+    font-size: 14px;
 }
 
 a:link {
@@ -30,9 +36,16 @@ a:active {
     margin: auto;
 }
 
-input, textarea{
+input, 
+textarea {
     background-color: $akaLightBlue;
     color: #FFF;
+}
+
+:focus {
+    outline-color: green;
+    outline-style: auto;
+    outline-width: 5px;
 }
 
 .form-control {
@@ -41,7 +54,7 @@ input, textarea{
     padding: 0.375rem 0.75rem;
     font-size: 0.9rem;
     line-height: 1.6;
-    color: #495057;
+    color: $akaGrey;
     background-color: rgb(225, 246, 255);
     background-clip: padding-box;
     border: 0px solid #ced4da;
@@ -62,10 +75,6 @@ input:-webkit-autofill {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-p {
-    color: black;
-}
-
 .nopacity {
     opacity: 0;
 }
@@ -84,4 +93,56 @@ p {
     font-family: 'Scene';
     font-weight: 500;
     src: url('/fonts/SceneAH-Medium.otf') format('opentype'), url('/fonts/SceneProMedium.woff') format('woff');
+}
+
+.akaBorderRadius {
+    border-radius: 7px;
+}
+
+.akaBgBlue {
+    background-color: $akaBlue;
+}
+
+.akaBgPink {
+    background-color: $akaPink;
+}
+
+.akaMt2rem {
+    margin-top: 2rem;
+}
+
+.akaMl1rem {
+    margin-left: 0.5rem;
+}
+
+.akaNoWrap {
+    white-space: nowrap;
+}
+
+.akaFlexRow {
+    display: flex;
+    input[type=checkbox] {
+        zoom: 1.5;
+    }
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: $akaGrey;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: $akaGrey;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: $akaGrey;
+}
+
+.btn {
+    font-size: 16px;
+}
+
+.akaPink {
+    color: $akaPink;
 }
