--- a/resources/assets/sass/components/_upload.scss
+++ b/resources/assets/sass/components/_upload.scss
@@ -10,7 +10,7 @@ input[type="file"] {
     align-items: center;
     border-radius: 7px;
     color: white;
-    background-color: $akaBlue;
+    background-color: $akaGreen;
     cursor: pointer;
     overflow: hidden;
     white-space: nowrap;
