--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,7 +32,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Raleway", sans-serif;
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -71,7 +71,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -6266,7 +6266,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -6391,7 +6391,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Raleway", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -10417,7 +10417,6 @@ a.text-dark:focus {
 
 body {
   background: #FFFFFF;
-  color: #0094BB;
   font-family: 'Scene';
   font-size: 16px;
 }
@@ -10428,11 +10427,11 @@ p {
 }
 
 a:link {
-  color: #0094BB;
+  color: #7BB63E;
 }
 
 a:visited {
-  color: #0094BB;
+  color: #7BB63E;
 }
 
 a:hover {
@@ -10441,7 +10440,7 @@ a:hover {
 }
 
 a:active {
-  color: #E0F5FF;
+  color: #f0ffe2;
 }
 
 .akaContainer {
@@ -10451,14 +10450,8 @@ a:active {
 
 input,
 textarea {
-  background-color: #E0F5FF;
+  background-color: #f0ffe2;
   color: #FFF;
-}
-
-:focus {
-  outline-color: green;
-  outline-style: auto;
-  outline-width: 5px;
 }
 
 .form-control {
@@ -10468,9 +10461,9 @@ textarea {
   font-size: 0.9rem;
   line-height: 1.6;
   color: #9e9e9e;
-  background-color: #e1f6ff;
+  background-color: white;
   background-clip: padding-box;
-  border: 0px solid #ced4da;
+  border: 1.2px solid #7BB63E;
   border-radius: 0.25rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -10478,12 +10471,20 @@ textarea {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
 
+.form-group :focus,
+.akaContainer :focus {
+  border-color: #7BB63E;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(123, 182, 62, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(123, 182, 62, 0.25);
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus input:-webkit-autofill {
-  background-color: #E0F5FF;
+  background-color: #f0ffe2;
   -webkit-text-fill-color: #495057;
-  -webkit-box-shadow: 0 0 0px 1000px #E0F5FF inset;
+  -webkit-box-shadow: 0 0 0px 1000px #f0ffe2 inset;
   -webkit-transition: background-color 5000s ease-in-out 0s;
   transition: background-color 5000s ease-in-out 0s;
 }
@@ -10492,8 +10493,8 @@ input:-webkit-autofill:focus input:-webkit-autofill {
   opacity: 0;
 }
 
-.akaBlueText {
-  color: #0094BB;
+.akaGreenText {
+  color: #7BB63E;
 }
 
 @font-face {
@@ -10508,16 +10509,29 @@ input:-webkit-autofill:focus input:-webkit-autofill {
   src: url("/fonts/SceneAH-Medium.otf") format("opentype"), url("/fonts/SceneProMedium.woff") format("woff");
 }
 
+.btn {
+  font-size: 16px;
+  background-color: #7BB63E;
+}
+
 .akaBorderRadius {
   border-radius: 7px;
+}
+
+.akaBgGreen {
+  background-color: #7BB63E;
+}
+
+.akaBgPink {
+  background-color: #E50F63;
 }
 
 .akaBgBlue {
   background-color: #0094BB;
 }
 
-.akaBgPink {
-  background-color: #E50F63;
+.akaBgOrange {
+  background-color: #F7911E;
 }
 
 .akaMt2rem {
@@ -10580,12 +10594,12 @@ input:-webkit-autofill:focus input:-webkit-autofill {
   color: #9e9e9e;
 }
 
-.btn {
-  font-size: 16px;
-}
-
 .akaPink {
   color: #E50F63;
+}
+
+.akaGreen {
+  color: #7BB63E;
 }
 
 .akaPostImage {
@@ -10598,16 +10612,16 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 }
 
 .akaPost {
-  background-color: #E0F5FF;
+  background-color: #f0ffe2;
   border-radius: 7px;
 }
 
 .akaTime {
   font-size: 0.75rem;
+  font-weight: 300;
 }
 
 .akaButton {
-  background-color: #0094BB;
   width: 50%;
   border-radius: 0;
   margin-top: -1.25rem;
@@ -10629,6 +10643,15 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 
 .akaMarginTinyLeft {
   margin-left: 1px;
+}
+
+.akaPostText {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.akaPostTitle {
+  font-size: 18px;
 }
 
 .akaNavPlaceholder {
@@ -10682,17 +10705,16 @@ a.akaNavTopLink {
 
 a.akaNavLink {
   font-size: 20px;
-  color: #1F304D;
-  opacity: 0.5;
+  color: #9e9e9e;
 }
 
 a.akaNavLink.active {
-  opacity: 1;
+  color: black;
   text-decoration: underline;
 }
 
 .akaNavBottom {
-  border-top: 1px solid #9e9e9e;
+  border-top: 1px solid #BFBFBF;
 }
 
 .akaBubble {
@@ -10717,7 +10739,7 @@ a.akaNavLink.active {
 }
 
 .akaHem {
-  background: #00A64F;
+  background: #7BB63E;
   background-image: url(/images/houseWhite.svg);
   background-repeat: no-repeat;
   background-position: 50% 45%;
@@ -10744,44 +10766,44 @@ a.akaNavLink.active {
 .akaFel.active:hover {
   background-color: white;
   background-image: url(/images/trianglePink.svg);
-  -webkit-box-shadow: 0px 0px 18px #9e9e9e;
-          box-shadow: 0px 0px 18px #9e9e9e;
+  -webkit-box-shadow: 0px 0px 18px #BFBFBF;
+          box-shadow: 0px 0px 18px #BFBFBF;
 }
 
 .akaHem:hover,
 .akaHem.active:hover {
   background-color: white;
   background-image: url(/images/houseGreen.svg);
-  -webkit-box-shadow: 0px 0px 18px #9e9e9e;
-          box-shadow: 0px 0px 18px #9e9e9e;
+  -webkit-box-shadow: 0px 0px 18px #BFBFBF;
+          box-shadow: 0px 0px 18px #BFBFBF;
 }
 
 .akaIde:hover,
 .akaIde.active:hover {
   background-color: white;
   background-image: url(/images/bulbBlue.svg);
-  -webkit-box-shadow: 0px 0px 18px #9e9e9e;
-          box-shadow: 0px 0px 18px #9e9e9e;
+  -webkit-box-shadow: 0px 0px 18px #BFBFBF;
+          box-shadow: 0px 0px 18px #BFBFBF;
 }
 
 .akaFel.active {
   background-color: white;
-  -webkit-box-shadow: 0px 0px 0px 1px #9e9e9e;
-          box-shadow: 0px 0px 0px 1px #9e9e9e;
+  -webkit-box-shadow: 0px 0px 0px 1px #BFBFBF;
+          box-shadow: 0px 0px 0px 1px #BFBFBF;
   background-image: url(/images/trianglePink.svg);
 }
 
 .akaHem.active {
   background-color: white;
-  -webkit-box-shadow: 0px 0px 0px 1px #9e9e9e;
-          box-shadow: 0px 0px 0px 1px #9e9e9e;
+  -webkit-box-shadow: 0px 0px 0px 1px #BFBFBF;
+          box-shadow: 0px 0px 0px 1px #BFBFBF;
   background-image: url(/images/houseGreen.svg);
 }
 
 .akaIde.active {
   background-color: white;
-  -webkit-box-shadow: 0px 0px 0px 1px #9e9e9e;
-          box-shadow: 0px 0px 0px 1px #9e9e9e;
+  -webkit-box-shadow: 0px 0px 0px 1px #BFBFBF;
+          box-shadow: 0px 0px 0px 1px #BFBFBF;
   background-image: url(/images/bulbBlue.svg);
 }
 
@@ -10819,7 +10841,7 @@ input[type="file"] {
           align-items: center;
   border-radius: 7px;
   color: white;
-  background-color: #0094BB;
+  background-color: #7BB63E;
   cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
@@ -10889,6 +10911,22 @@ input[type="file"] {
   outline: none;
 }
 
+.akaMapInput.akaOrange button {
+  background-color: #F7911E;
+}
+
+.akaMapInput.akaOrange input {
+  border: 1.2px #F7911E solid;
+}
+
+.akaMapInput.akaBlue button {
+  background-color: #0094BB;
+}
+
+.akaMapInput.akaBlue input {
+  border: 1.2px #0094BB solid;
+}
+
 .akaRelative {
   position: relative;
 }
@@ -10903,9 +10941,10 @@ input[type="file"] {
 }
 
 .akaErrorReport :focus {
-  outline-color: #E50F63;
-  outline-style: auto;
-  outline-width: 5px;
+  border-color: #E50F63;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(229, 15, 101, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(229, 15, 101, 0.25);
 }
 
 .akaErrorReport h5 {
@@ -10970,9 +11009,10 @@ input[type="file"] {
 }
 
 .akaMalfunction :focus {
-  outline-color: #F7911E;
-  outline-style: auto;
-  outline-width: 5px;
+  border-color: #F7911E;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(247, 146, 30, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(247, 146, 30, 0.25);
 }
 
 .akaMalfunction h5 {
@@ -10985,8 +11025,17 @@ input[type="file"] {
   border: 1.2px solid #F7911E;
 }
 
+.akaMalfunction .form-group.akaShort textarea {
+  height: 80px;
+}
+
 .akaMalfunction .form-group textarea {
   height: 338px;
+  border: 1.2px solid #F7911E;
+}
+
+.akaMalfunction input {
+  border: 1.2px solid #F7911E;
 }
 
 .akaMalfunction .inputfile + label {
@@ -11014,21 +11063,66 @@ input[type="file"] {
   color: #9e9e9e;
 }
 
-.akaFormControl {
-  display: block;
-  width: 100%;
+.akaFormControl.akaOrange {
+  border: 1.2px solid #F7911E;
+}
+
+.akaIdeas {
+  color: #0094BB;
+}
+
+.akaIdeas :focus {
+  border-color: #0094BB;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 146, 187, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(0, 146, 187, 0.25);
+}
+
+.akaIdeas h5 {
+  font-size: 18px;
+}
+
+.akaIdeas .form-control {
   padding: 0.375rem 0.5rem;
   height: 40px;
-  font-size: 0.9rem;
-  line-height: 1.6;
-  color: #495057;
-  background-color: white;
-  background-clip: padding-box;
-  border: 1.2px solid #F7911E;
+  border: 1.2px solid #0094BB;
+}
+
+.akaIdeas .form-group textarea {
+  height: 338px;
+  border: 1.2px solid #0094BB;
+}
+
+.akaIdeas input {
+  border: 1.2px solid #0094BB;
+}
+
+.akaIdeas .inputfile + label {
+  margin: 0;
+  padding: 7px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 7px;
-  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  color: white;
+  background-color: #0094BB;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.akaTextProp {
+  font-size: 0.75rem;
+  color: #9e9e9e;
+}
+
+.akaFormControl.akaBlue {
+  border: 1.2px solid #0094BB;
 }
 
