--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,19 +1,15 @@
-
 $akaBlue: #0094BB;
 $akaLightBlue: #E0F5FF;
 $akaWhite: #FFFFFF;
 $akaLightGrey: #BFBFBF;
 $akaGrey: #9e9e9e;
 $akaPink: #E50F63;
-$akaGreen: #00A64F;
+$akaOldGreen: #00A64F;
+$akaGreen: #7BB63E;
+$akaLightGreen: rgb(240, 255, 226);
 $akaDarkBlue: #1F304D;
 $akaOrange: #F7911E;
 
-
-
-
-
 // Typography
-$font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
