--- a/resources/assets/sass/components/_navBottom.scss
+++ b/resources/assets/sass/components/_navBottom.scss
@@ -1,5 +1,5 @@
 .akaNavBottom {
-    border-top: 1px solid $akaGrey;
+    border-top: 1px solid $akaLightGrey;
 }
 
 .akaBubble {
@@ -50,34 +50,34 @@
 .akaFel:hover, .akaFel.active:hover {
     background-color: white;
     background-image: url(/images/trianglePink.svg);
-    box-shadow: 0px 0px 18px $akaGrey;
+    box-shadow: 0px 0px 18px $akaLightGrey;
 }
 .akaHem:hover, .akaHem.active:hover {
     background-color: white;
     background-image: url(/images/houseGreen.svg);
-    box-shadow: 0px 0px 18px $akaGrey;
+    box-shadow: 0px 0px 18px $akaLightGrey;
 }
 .akaIde:hover, .akaIde.active:hover{
     background-color: white;
     background-image: url(/images/bulbBlue.svg);
-    box-shadow: 0px 0px 18px $akaGrey;
+    box-shadow: 0px 0px 18px $akaLightGrey;
 }
 
 .akaFel.active {
     background-color: white;
-    box-shadow: 0px 0px 0px 1px $akaGrey;
+    box-shadow: 0px 0px 0px 1px $akaLightGrey;
     background-image: url(/images/trianglePink.svg);
 }
 
 .akaHem.active {
     background-color: white;
-    box-shadow: 0px 0px 0px 1px $akaGrey;
+    box-shadow: 0px 0px 0px 1px $akaLightGrey;
     background-image: url(/images/houseGreen.svg);
 }
 
 .akaIde.active {
     background-color: white;
-    box-shadow: 0px 0px 0px 1px $akaGrey;
+    box-shadow: 0px 0px 0px 1px $akaLightGrey;
     background-image: url(/images/bulbBlue.svg);
 }
 
