--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -9,6 +9,7 @@ $akaGreen: #7BB63E;
 $akaLightGreen: rgb(240, 255, 226);
 $akaDarkBlue: #1F304D;
 $akaOrange: #F7911E;
+$akaLightOrange: rgb(255, 243, 230);
 
 // Typography
 $font-size-base: 0.9rem;
