--- a/resources/assets/sass/_styles.scss
+++ b/resources/assets/sass/_styles.scss
@@ -35,12 +35,6 @@ a:active {
     margin: auto;
 }
 
-input, 
-textarea {
-    background-color: $akaLightGreen;
-    color: #FFF;
-}
-
 .form-control {
     display: block;
     width: 100%;
@@ -69,15 +63,13 @@ textarea {
 
 }
 
-
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus
 input:-webkit-autofill {
-  background-color: $akaLightGreen;
+  background-color: white;
   -webkit-text-fill-color: #495057;
-  -webkit-box-shadow: 0 0 0px 1000px $akaLightGreen inset;
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
   transition: background-color 5000s ease-in-out 0s;
 }
 
@@ -166,3 +158,6 @@ input:-webkit-autofill {
     color: $akaGreen;
 }
 
+.page-link:hover {
+    color: $akaGreen;
+}
