--- a/resources/assets/sass/components/_malfunction.scss
+++ b/resources/assets/sass/components/_malfunction.scss
@@ -59,3 +59,11 @@
 .akaFormControl.akaOrange {
     border: 1.2px solid $akaOrange;
 }
+
+.akaMalfunctionCard {
+    background-color: $akaLightOrange;
+    border-radius: 7px;
+    border: 1px solid $akaOrange;
+
+    h3, h4 { color: black;}
+}
