There is no charge for awesomeness...

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 $akaBlue: #3D92B7;
 $akaDarkBlue: rgb(43, 106, 133);
-// $akaLightBlue: #E0F5FF;
+
 $akaWhite: #FFFFFF;
 $akaLightGrey: #BFBFBF;
 $akaGrey: #9e9e9e;
@@ -10,7 +10,9 @@ $akaPink: #E50F63;
 $akaDarkPink: rgb(175, 12, 77);
 
 $akaLightGreen: rgb(240, 255, 226);
-$akaGreen: #7BB63E;
+$akaGreen: rgb(132, 196, 67);
+// $akaGreen: #84C443;
+
 $akaDarkGreen: rgb(100, 150, 50);
 
 $akaLightOrange: rgb(255, 243, 230);
