--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10428,11 +10428,11 @@ p {
 }
 
 a:link {
-  color: #7BB63E;
+  color: #84c443;
 }
 
 a:visited {
-  color: #7BB63E;
+  color: #84c443;
 }
 
 a:hover {
@@ -10458,7 +10458,7 @@ a:active {
   color: #9e9e9e;
   background-color: white;
   background-clip: padding-box;
-  border: 1.2px solid #7BB63E;
+  border: 1.2px solid #84c443;
   border-radius: 0.25rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -10468,7 +10468,7 @@ a:active {
 
 .form-group :focus,
 .akaContainer :focus {
-  border-color: #7BB63E;
+  border-color: #84c443;
   outline: 0;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(123, 182, 62, 0.25);
   box-shadow: 0 0 0 0.2rem rgba(123, 182, 62, 0.25);
@@ -10489,7 +10489,7 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 }
 
 .akaGreenText {
-  color: #7BB63E;
+  color: #84c443;
 }
 
 @font-face {
@@ -10506,7 +10506,7 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 
 .btn {
   font-size: 16px;
-  background-color: #7BB63E;
+  background-color: #84c443;
 }
 
 .akaBorderRadius {
@@ -10514,7 +10514,7 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 }
 
 .akaBgGreen {
-  background-color: #7BB63E;
+  background-color: #84c443;
 }
 
 .akaBgGreen:hover {
@@ -10606,7 +10606,7 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 }
 
 .akaGreen {
-  color: #7BB63E;
+  color: #84c443;
 }
 
 .akaOrange {
@@ -10614,7 +10614,7 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 }
 
 .page-link:hover {
-  color: #7BB63E;
+  color: #84c443;
 }
 
 .akaFontWeightL {
@@ -10648,7 +10648,7 @@ input:-webkit-autofill:focus input:-webkit-autofill {
 .akaPost {
   background-color: white;
   border-radius: 7px;
-  border: 1px solid #7BB63E;
+  border: 1px solid #84c443;
 }
 
 .akaTime {
@@ -10772,7 +10772,7 @@ a.akaNavLink.active {
 }
 
 .akaHem {
-  background: #7BB63E;
+  background: #84c443;
   background-image: url(/images/houseWhite.svg);
   background-repeat: no-repeat;
   background-position: 50% 45%;
@@ -10874,7 +10874,7 @@ input[type="file"] {
           align-items: center;
   border-radius: 7px;
   color: white;
-  background-color: #7BB63E;
+  background-color: #84c443;
   cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
@@ -11140,23 +11140,25 @@ input[type="file"] {
 }
 
 .akaMalfunctionNotification h3 {
+  margin-top: 3px;
   font-size: 20px;
   font-weight: 500;
 }
 
 .akaMalfunctionNotification h4 {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
 }
 
 .akaMalfunctionNotification p {
+  font-size: 14px;
   color: white;
 }
 
 .akaMalfunctionNotification .card-body {
   border-top: 1px solid #e97ba7;
   padding: 10px;
-  padding-bottom: 0px;
+  padding-bottom: 10px;
   margin: 0;
 }
 
@@ -11164,12 +11166,18 @@ input[type="file"] {
   font-weight: 300;
 }
 
+.akaMalfunctionNotification a {
+  color: white;
+  text-decoration: underline;
+}
+
 .akaWhiteCross {
   position: absolute;
   right: 10px;
   top: 10px;
-  width: 20px;
-  height: 20px;
+  width: 23px;
+  height: 23px;
+  cursor: pointer;
 }
 
 .akaNotificationContainer {
@@ -11178,6 +11186,10 @@ input[type="file"] {
   background-color: #E50F63;
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
+}
+
+.akaNoBottomMargin {
+  margin-bottom: 0;
 }
 
 .akaIdeas {
