--- a/resources/assets/sass/components/_malfunctionNotification.scss
+++ b/resources/assets/sass/components/_malfunctionNotification.scss
@@ -7,26 +7,33 @@
     border-bottom-right-radius: 7px;
     color: white;
     text-align: center;
-    h3 { 
+    h3 {
+        margin-top: 3px; 
         font-size: 20px;
         font-weight: 500;
     }
     h4 {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 500; 
     }
     p { 
+        font-size: 14px;
         color: white;
     }
 
     .card-body {
         border-top: 1px solid $akaLightPink;
         padding: 10px;
-        padding-bottom: 0px;
+        padding-bottom: 10px;
         margin: 0;
     }
     h4.akaFontWeightL {
         font-weight: 300; 
+    }
+
+    a {
+        color: white;
+        text-decoration: underline;
     }
 }
 
@@ -34,8 +41,9 @@
     position: absolute;
     right: 10px;
     top: 10px;
-    width: 20px;
-    height: 20px;
+    width: 23px;
+    height: 23px;
+    cursor: pointer;
 }
 
 .akaNotificationContainer {
@@ -45,4 +53,8 @@
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     // padding-bottom: 5px;
+}
+
+.akaNoBottomMargin {
+    margin-bottom: 0;
 }
