--- a/resources/assets/sass/components/_malfunctionNotification.scss
+++ b/resources/assets/sass/components/_malfunctionNotification.scss
@@ -24,7 +24,8 @@
     .card-body {
         border-top: 1px solid $akaLightPink;
         padding: 10px;
-        padding-bottom: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
         margin: 0;
     }
     h4.akaFontWeightL {
