--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10509,8 +10509,9 @@ input:-webkit-autofill:focus input:-webkit-autofill {
   background-color: #84c443;
 }
 
-.akaBorderRadius {
-  border-radius: 7px;
+.btn:not(:disabled):not(.disabled):active,
+.btn:not(:disabled):not(.disabled).active {
+  background-image: initial;
 }
 
 .akaBgGreen {
@@ -10929,6 +10930,26 @@ input[type="file"] {
   margin-right: 0px;
   border-radius: 7px;
   background-color: #E50F63;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
+}
+
+.akaMapInput button.akaSet {
+  background-image: url(/images/check.svg);
+  border: none;
+  width: 45px;
+  height: 40px;
+  margin: 10px;
+  margin-left: 0px;
+  border-radius: 7px;
+  background-color: #E50F63;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
+}
+
+.akaMapInput button.akaLocate {
   background-image: url(/images/location.svg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -10954,10 +10975,6 @@ input[type="file"] {
   border: 1.2px #E50F63 solid;
   height: 40px;
   width: 100%;
-}
-
-.akaMapInput button:focus {
-  outline: none;
 }
 
 .akaMapInput.akaOrange button {
@@ -10991,6 +11008,49 @@ input[type="file"] {
 .akaGmap {
   width: 100%;
   height: 400px;
+}
+
+.akaLoading {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 2000;
+  font-size: 46px;
+  font-weight: 500;
+  color: black;
+  text-shadow: 0px 0px 10px #00000050;
+  -webkit-animation: pulse 2s infinite;
+          animation: pulse 2s infinite;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    color: black;
+  }
+
+  50% {
+    color: white;
+  }
+
+  100% {
+    color: black;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    color: black;
+  }
+
+  50% {
+    color: white;
+  }
+
+  100% {
+    color: black;
+  }
 }
 
 .akaErrorReport {
