--- a/resources/assets/sass/components/_googleMap.scss
+++ b/resources/assets/sass/components/_googleMap.scss
@@ -12,6 +12,26 @@
         margin-right: 0px;
         border-radius: 7px;
         background-color: $akaPink;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        cursor: pointer;
+    }
+
+    button.akaSet {
+        background-image: url(/images/check.svg);
+        border: none;
+        width: 45px; 
+        height: 40px;
+        margin: 10px;
+        margin-left: 0px;
+        border-radius: 7px;
+        background-color: $akaPink;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        cursor: pointer;
+    }
+
+    button.akaLocate {
         background-image: url(/images/location.svg);
         background-repeat: no-repeat;
         background-position: 50% 50%;
@@ -36,11 +56,6 @@
         height: 40px;
         width: 100%;  
     }
-
-    button:focus {
-        outline: none;
-    }
-
 }
 
 .akaMapInput.akaOrange {
@@ -75,3 +90,32 @@
     width: 100%;
     height: 400px;
 }
+
+.akaLoading {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2000;
+    font-size: 46px;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 10px #00000050;
+    animation: pulse 2s infinite;
+}
+  
+@keyframes pulse {
+    0% {
+        color: rgb(0, 0, 0);
+
+    }
+    50%{
+        color: rgb(255, 255, 255);
+
+    }
+    100% {
+
+        color: rgb(0, 0, 0);
+    }
+}
+
