--- a/resources/assets/sass/components/_navTop.scss
+++ b/resources/assets/sass/components/_navTop.scss
@@ -12,7 +12,11 @@
 
 .akaNavTop {
     border-bottom: 1px solid $akaGrey;
-    
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
 }
 
 .akaNavbarContainer {
